y.output
Terminals which are not used

   SQRT


State 65 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: instrucao
    2         | programa instrucao

    3 afirmacao: IDENTIFICADOR '=' expressao ';'

    4 expressao_relacional: expressao '>' expressao
    5                     | expressao '<' expressao
    6                     | expressao MENORIGUAL expressao
    7                     | expressao MAIORIGUAL expressao
    8                     | expressao IGUAL expressao

    9 expressao: TEXTO
   10          | IDENTIFICADOR
   11          | expressao '+' expressao
   12          | expressao '-' expressao
   13          | expressao '*' expressao
   14          | expressao '/' expressao
   15          | '-' expressao
   16          | '(' expressao ')'

   17 sentenca: IMPRIMA TEXTO ';'
   18         | IMPRIMA IDENTIFICADOR ';'

   19 inicio_if: /* empty */

   20 if_then: /* empty */

   21 if_else: /* empty */

   22 selecao: IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then if_else
   23        | IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then ELSE instrucao if_else

   24 instrucao: selecao
   25          | sentenca
   26          | afirmacao
   27          | expressao ';'
   28          | expressao_relacional ';'
   29          | bloco_instrucao

   30 conjunto_instrucao: instrucao
   31                   | conjunto_instrucao instrucao

   32 bloco_instrucao: INICIO ';' imprimir_label FIM ';'
   33                | INICIO ';' imprimir_label conjunto_instrucao FIM ';'

   34 imprimir_label: /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 16 22 23
')' (41) 16 22 23
'*' (42) 13
'+' (43) 11
'-' (45) 12 15
'/' (47) 14
';' (59) 3 17 18 27 28 32 33
'<' (60) 5
'=' (61) 3
'>' (62) 4
error (256)
IDENTIFICADOR (258) 3 10 18
INICIO (259) 32 33
FIM (260) 32 33
TEXTO (261) 9 17
SQRT (262)
IF (263) 22 23
IMPRIMA (264) 17 18
MAIORIGUAL (265) 7
IGUAL (266) 8
MENORIGUAL (267) 6
UMINUS (268)
THEN (269) 22 23
ELSE (270) 23


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
programa (27)
    on left: 1 2, on right: 0 2
afirmacao (28)
    on left: 3, on right: 26
expressao_relacional (29)
    on left: 4 5 6 7 8, on right: 22 23 28
expressao (30)
    on left: 9 10 11 12 13 14 15 16, on right: 3 4 5 6 7 8 11 12 13
    14 15 16 27
sentenca (31)
    on left: 17 18, on right: 25
inicio_if (32)
    on left: 19, on right: 22 23
if_then (33)
    on left: 20, on right: 22 23
if_else (34)
    on left: 21, on right: 22 23
selecao (35)
    on left: 22 23, on right: 24
instrucao (36)
    on left: 24 25 26 27 28 29, on right: 1 2 22 23 30 31
conjunto_instrucao (37)
    on left: 30 31, on right: 31 33
bloco_instrucao (38)
    on left: 32 33, on right: 29
imprimir_label (39)
    on left: 34, on right: 32 33


state 0

    0 $accept: . programa $end

    IDENTIFICADOR  shift, and go to state 1
    INICIO         shift, and go to state 2
    TEXTO          shift, and go to state 3
    IF             shift, and go to state 4
    IMPRIMA        shift, and go to state 5
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    programa              go to state 8
    afirmacao             go to state 9
    expressao_relacional  go to state 10
    expressao             go to state 11
    sentenca              go to state 12
    selecao               go to state 13
    instrucao             go to state 14
    bloco_instrucao       go to state 15


state 1

    3 afirmacao: IDENTIFICADOR . '=' expressao ';'
   10 expressao: IDENTIFICADOR .

    '='  shift, and go to state 16

    $default  reduce using rule 10 (expressao)


state 2

   32 bloco_instrucao: INICIO . ';' imprimir_label FIM ';'
   33                | INICIO . ';' imprimir_label conjunto_instrucao FIM ';'

    ';'  shift, and go to state 17


state 3

    9 expressao: TEXTO .

    $default  reduce using rule 9 (expressao)


state 4

   22 selecao: IF . '(' expressao_relacional ')' inicio_if THEN instrucao if_then if_else
   23        | IF . '(' expressao_relacional ')' inicio_if THEN instrucao if_then ELSE instrucao if_else

    '('  shift, and go to state 18


state 5

   17 sentenca: IMPRIMA . TEXTO ';'
   18         | IMPRIMA . IDENTIFICADOR ';'

    IDENTIFICADOR  shift, and go to state 19
    TEXTO          shift, and go to state 20


state 6

   15 expressao: '-' . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 22


state 7

   16 expressao: '(' . expressao ')'

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 23


state 8

    0 $accept: programa . $end
    2 programa: programa . instrucao

    $end           shift, and go to state 24
    IDENTIFICADOR  shift, and go to state 1
    INICIO         shift, and go to state 2
    TEXTO          shift, and go to state 3
    IF             shift, and go to state 4
    IMPRIMA        shift, and go to state 5
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    afirmacao             go to state 9
    expressao_relacional  go to state 10
    expressao             go to state 11
    sentenca              go to state 12
    selecao               go to state 13
    instrucao             go to state 25
    bloco_instrucao       go to state 15


state 9

   26 instrucao: afirmacao .

    $default  reduce using rule 26 (instrucao)


state 10

   28 instrucao: expressao_relacional . ';'

    ';'  shift, and go to state 26


state 11

    4 expressao_relacional: expressao . '>' expressao
    5                     | expressao . '<' expressao
    6                     | expressao . MENORIGUAL expressao
    7                     | expressao . MAIORIGUAL expressao
    8                     | expressao . IGUAL expressao
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao
   27 instrucao: expressao . ';'

    MAIORIGUAL  shift, and go to state 27
    IGUAL       shift, and go to state 28
    MENORIGUAL  shift, and go to state 29
    '<'         shift, and go to state 30
    '>'         shift, and go to state 31
    '+'         shift, and go to state 32
    '-'         shift, and go to state 33
    '*'         shift, and go to state 34
    '/'         shift, and go to state 35
    ';'         shift, and go to state 36


state 12

   25 instrucao: sentenca .

    $default  reduce using rule 25 (instrucao)


state 13

   24 instrucao: selecao .

    $default  reduce using rule 24 (instrucao)


state 14

    1 programa: instrucao .

    $default  reduce using rule 1 (programa)


state 15

   29 instrucao: bloco_instrucao .

    $default  reduce using rule 29 (instrucao)


state 16

    3 afirmacao: IDENTIFICADOR '=' . expressao ';'

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 37


state 17

   32 bloco_instrucao: INICIO ';' . imprimir_label FIM ';'
   33                | INICIO ';' . imprimir_label conjunto_instrucao FIM ';'

    $default  reduce using rule 34 (imprimir_label)

    imprimir_label  go to state 38


state 18

   22 selecao: IF '(' . expressao_relacional ')' inicio_if THEN instrucao if_then if_else
   23        | IF '(' . expressao_relacional ')' inicio_if THEN instrucao if_then ELSE instrucao if_else

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao_relacional  go to state 39
    expressao             go to state 40


state 19

   18 sentenca: IMPRIMA IDENTIFICADOR . ';'

    ';'  shift, and go to state 41


state 20

   17 sentenca: IMPRIMA TEXTO . ';'

    ';'  shift, and go to state 42


state 21

   10 expressao: IDENTIFICADOR .

    $default  reduce using rule 10 (expressao)


state 22

   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao
   15          | '-' expressao .

    $default  reduce using rule 15 (expressao)


state 23

   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao
   16          | '(' expressao . ')'

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 43


state 24

    0 $accept: programa $end .

    $default  accept


state 25

    2 programa: programa instrucao .

    $default  reduce using rule 2 (programa)


state 26

   28 instrucao: expressao_relacional ';' .

    $default  reduce using rule 28 (instrucao)


state 27

    7 expressao_relacional: expressao MAIORIGUAL . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 44


state 28

    8 expressao_relacional: expressao IGUAL . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 45


state 29

    6 expressao_relacional: expressao MENORIGUAL . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 46


state 30

    5 expressao_relacional: expressao '<' . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 47


state 31

    4 expressao_relacional: expressao '>' . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 48


state 32

   11 expressao: expressao '+' . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 49


state 33

   12 expressao: expressao '-' . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 50


state 34

   13 expressao: expressao '*' . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 51


state 35

   14 expressao: expressao '/' . expressao

    IDENTIFICADOR  shift, and go to state 21
    TEXTO          shift, and go to state 3
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    expressao  go to state 52


state 36

   27 instrucao: expressao ';' .

    $default  reduce using rule 27 (instrucao)


state 37

    3 afirmacao: IDENTIFICADOR '=' expressao . ';'
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 53


state 38

   32 bloco_instrucao: INICIO ';' imprimir_label . FIM ';'
   33                | INICIO ';' imprimir_label . conjunto_instrucao FIM ';'

    IDENTIFICADOR  shift, and go to state 1
    INICIO         shift, and go to state 2
    FIM            shift, and go to state 54
    TEXTO          shift, and go to state 3
    IF             shift, and go to state 4
    IMPRIMA        shift, and go to state 5
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    afirmacao             go to state 9
    expressao_relacional  go to state 10
    expressao             go to state 11
    sentenca              go to state 12
    selecao               go to state 13
    instrucao             go to state 55
    conjunto_instrucao    go to state 56
    bloco_instrucao       go to state 15


state 39

   22 selecao: IF '(' expressao_relacional . ')' inicio_if THEN instrucao if_then if_else
   23        | IF '(' expressao_relacional . ')' inicio_if THEN instrucao if_then ELSE instrucao if_else

    ')'  shift, and go to state 57


state 40

    4 expressao_relacional: expressao . '>' expressao
    5                     | expressao . '<' expressao
    6                     | expressao . MENORIGUAL expressao
    7                     | expressao . MAIORIGUAL expressao
    8                     | expressao . IGUAL expressao
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    MAIORIGUAL  shift, and go to state 27
    IGUAL       shift, and go to state 28
    MENORIGUAL  shift, and go to state 29
    '<'         shift, and go to state 30
    '>'         shift, and go to state 31
    '+'         shift, and go to state 32
    '-'         shift, and go to state 33
    '*'         shift, and go to state 34
    '/'         shift, and go to state 35


state 41

   18 sentenca: IMPRIMA IDENTIFICADOR ';' .

    $default  reduce using rule 18 (sentenca)


state 42

   17 sentenca: IMPRIMA TEXTO ';' .

    $default  reduce using rule 17 (sentenca)


state 43

   16 expressao: '(' expressao ')' .

    $default  reduce using rule 16 (expressao)


state 44

    7 expressao_relacional: expressao MAIORIGUAL expressao .
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 7 (expressao_relacional)


state 45

    8 expressao_relacional: expressao IGUAL expressao .
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 8 (expressao_relacional)


state 46

    6 expressao_relacional: expressao MENORIGUAL expressao .
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 6 (expressao_relacional)


state 47

    5 expressao_relacional: expressao '<' expressao .
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 5 (expressao_relacional)


state 48

    4 expressao_relacional: expressao '>' expressao .
   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 4 (expressao_relacional)


state 49

   11 expressao: expressao . '+' expressao
   11          | expressao '+' expressao .
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 11 (expressao)


state 50

   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   12          | expressao '-' expressao .
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 12 (expressao)


state 51

   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   13          | expressao '*' expressao .
   14          | expressao . '/' expressao

    $default  reduce using rule 13 (expressao)


state 52

   11 expressao: expressao . '+' expressao
   12          | expressao . '-' expressao
   13          | expressao . '*' expressao
   14          | expressao . '/' expressao
   14          | expressao '/' expressao .

    $default  reduce using rule 14 (expressao)


state 53

    3 afirmacao: IDENTIFICADOR '=' expressao ';' .

    $default  reduce using rule 3 (afirmacao)


state 54

   32 bloco_instrucao: INICIO ';' imprimir_label FIM . ';'

    ';'  shift, and go to state 58


state 55

   30 conjunto_instrucao: instrucao .

    $default  reduce using rule 30 (conjunto_instrucao)


state 56

   31 conjunto_instrucao: conjunto_instrucao . instrucao
   33 bloco_instrucao: INICIO ';' imprimir_label conjunto_instrucao . FIM ';'

    IDENTIFICADOR  shift, and go to state 1
    INICIO         shift, and go to state 2
    FIM            shift, and go to state 59
    TEXTO          shift, and go to state 3
    IF             shift, and go to state 4
    IMPRIMA        shift, and go to state 5
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    afirmacao             go to state 9
    expressao_relacional  go to state 10
    expressao             go to state 11
    sentenca              go to state 12
    selecao               go to state 13
    instrucao             go to state 60
    bloco_instrucao       go to state 15


state 57

   22 selecao: IF '(' expressao_relacional ')' . inicio_if THEN instrucao if_then if_else
   23        | IF '(' expressao_relacional ')' . inicio_if THEN instrucao if_then ELSE instrucao if_else

    $default  reduce using rule 19 (inicio_if)

    inicio_if  go to state 61


state 58

   32 bloco_instrucao: INICIO ';' imprimir_label FIM ';' .

    $default  reduce using rule 32 (bloco_instrucao)


state 59

   33 bloco_instrucao: INICIO ';' imprimir_label conjunto_instrucao FIM . ';'

    ';'  shift, and go to state 62


state 60

   31 conjunto_instrucao: conjunto_instrucao instrucao .

    $default  reduce using rule 31 (conjunto_instrucao)


state 61

   22 selecao: IF '(' expressao_relacional ')' inicio_if . THEN instrucao if_then if_else
   23        | IF '(' expressao_relacional ')' inicio_if . THEN instrucao if_then ELSE instrucao if_else

    THEN  shift, and go to state 63


state 62

   33 bloco_instrucao: INICIO ';' imprimir_label conjunto_instrucao FIM ';' .

    $default  reduce using rule 33 (bloco_instrucao)


state 63

   22 selecao: IF '(' expressao_relacional ')' inicio_if THEN . instrucao if_then if_else
   23        | IF '(' expressao_relacional ')' inicio_if THEN . instrucao if_then ELSE instrucao if_else

    IDENTIFICADOR  shift, and go to state 1
    INICIO         shift, and go to state 2
    TEXTO          shift, and go to state 3
    IF             shift, and go to state 4
    IMPRIMA        shift, and go to state 5
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    afirmacao             go to state 9
    expressao_relacional  go to state 10
    expressao             go to state 11
    sentenca              go to state 12
    selecao               go to state 13
    instrucao             go to state 64
    bloco_instrucao       go to state 15


state 64

   22 selecao: IF '(' expressao_relacional ')' inicio_if THEN instrucao . if_then if_else
   23        | IF '(' expressao_relacional ')' inicio_if THEN instrucao . if_then ELSE instrucao if_else

    $default  reduce using rule 20 (if_then)

    if_then  go to state 65


state 65

   22 selecao: IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then . if_else
   23        | IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then . ELSE instrucao if_else

    ELSE  shift, and go to state 66

    ELSE      [reduce using rule 21 (if_else)]
    $default  reduce using rule 21 (if_else)

    if_else  go to state 67


state 66

   23 selecao: IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then ELSE . instrucao if_else

    IDENTIFICADOR  shift, and go to state 1
    INICIO         shift, and go to state 2
    TEXTO          shift, and go to state 3
    IF             shift, and go to state 4
    IMPRIMA        shift, and go to state 5
    '-'            shift, and go to state 6
    '('            shift, and go to state 7

    afirmacao             go to state 9
    expressao_relacional  go to state 10
    expressao             go to state 11
    sentenca              go to state 12
    selecao               go to state 13
    instrucao             go to state 68
    bloco_instrucao       go to state 15


state 67

   22 selecao: IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then if_else .

    $default  reduce using rule 22 (selecao)


state 68

   23 selecao: IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then ELSE instrucao . if_else

    $default  reduce using rule 21 (if_else)

    if_else  go to state 69


state 69

   23 selecao: IF '(' expressao_relacional ')' inicio_if THEN instrucao if_then ELSE instrucao if_else .

    $default  reduce using rule 23 (selecao)
